--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
     </div>
   </div>
 
+  <div class="shop" id="shop">
+    <div class="item">
+      <img width="200" src="images/img-1.jpg" alt="">
+      <div class="details">
+        <h3>Casual Shirt</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+      </div>
+    </div>
+  </div>
 
 </body>
 <script src="main.js"></script>
