--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
       <div class="details">
         <h3>Casual Shirt</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+        <div class="price-quantity">
+          <h2>$ 45</h2>
+          <div class="buttons">
+            <i class="bi bi-plus-lg"></i>
+            <div class="quantity">0</div>
+            <i class="bi bi-dash-lg"></i>
+          </div>
+        </div>
       </div>
     </div>
   </div>
