home tag attribute added

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
   <div class="navbar">
+    <a href="index.html">
     <h2>Clothing Store</h2>
-    <div class="cart">
+    <div class="cart" href="cart.html">
       <i class="bi bi-cart4"></i>
       <div id="cartAmount" class="cartAmount">0</div>
     </div>
