--- a/index.html
+++ b/index.html
@@ -11,17 +11,25 @@
 <body>
   <div class="navbar">
     <a href="index.html">
-    <h2>Clothing Store</h2>
-    <div class="cart" href="cart.html">
-      <i class="bi bi-cart4"></i>
-      <div id="cartAmount" class="cartAmount">0</div>
-    </div>
+      <h2>Clothing Store</h2>
+    </a>
+
+    <a href="cart.html">
+      <div class="cart">
+        <i class="bi bi-cart2"></i>
+        <div id="cartAmount" class="cartAmount">0</div>
+      </div>
+    </a>
+
   </div>
 
   <div class="shop" id="shop">
-    
+
+
   </div>
 
 </body>
+<script src="src/Data.js"></script>
 <script src="src/main.js"></script>
+
 </html>
