--- a/cart.html
+++ b/cart.html
@@ -11,7 +11,25 @@
 </head>
 
 <body>
- 
+  <div class="navbar">
+    <a href="index.html">
+      <h2>Clothing Store</h2>
+    </a>
+
+    <a href="cart.html">
+      <div class="cart">
+        <i class="bi bi-cart2"></i>
+        <div id="cartAmount" class="cartAmount">0</div>
+      </div>
+    </a>
+
+  </div>
+
+  <div id="label" class="text-center"></div>
+
+  <div class="shopping-cart" id="shopping-cart"></div>
 </body>
+<script src="src/Data.js"></script>
 <script src="src/cart.js"></script>
+
 </html>
